# calculator

./: .clang-tidy  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
include/: calculator.hpp  checker.hpp  logger.hpp  parser.hpp  printer.hpp  runner.hpp  types.hpp
lib/: CMakeLists.txt
lib/include/: mathlib.h
lib/src/: mathlib.cpp
src/: calculator.cpp  checker.cpp  logger.cpp  main.cpp  parser.cpp  printer.cpp  runner.cpp
tests/: test_calculator.cpp
